...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Stx-AU-jor" userLabel="Main">
                                <rect key="frame" x="10.5" y="48" width="393" height="810"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zXD-1k-g74" userLabel="nombre">
                                        <rect key="frame" x="0.0" y="0.0" width="393" height="81"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Piedra, papel o tijeras" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="64M-s7-OEk">
                                                <rect key="frame" x="69.5" y="24" width="254.5" height="33.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Elección:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kOn-hS-MPd">
                                                <rect key="frame" x="264" y="85" width="69" height="21"/>
                                                <accessibility key="accessibilityConfiguration" identifier="ElecCompu"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                        <constraints>
...
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="Computadora" destination="kOn-hS-MPd" id="LcY-CG-caD"/>
                        <outlet property="Jugador" destination="FkJ-t6-dmj" id="pMb-yn-FeU"/>
                        <outlet property="Piedra" destination="9YV-ci-R5w" id="gNp-2Y-EkV"/>
                        <outlet property="Tijeras" destination="Tcf-lj-zdi" id="JYU-2G-jUW"/>
                        <outlet property="otravez" destination="5yq-pa-SKz" id="UFD-Kj-6eV"/>
                        <outlet property="papel" destination="zhY-9t-JmU" id="Ge9-AG-dKA"/>
                        <outlet property="resultado" destination="WGF-Z6-Kcd" id="HMj-e1-v04"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
